# bebop2_multi_uav

./: README.md  ip.txt
files/drones/: Readme.txt  bebop2_local.drone  bebop2_local2.drone  bebop2_local3.drone
files/launch/: bebop_node.launch  bebop_node_f1.launch  bebop_node_f2.launch
files/models/: Readme.txt
files/models/Bebop_model/: model.config  model.sdf
files/models/Bebop_model/meshes/: drone.stl
files/models/chair/: model.config  model.sdf
files/models/room/: model.config
files/models/unit_box_podstawa/: model.config  model.sdf
files/models/unit_box_room/: model.config  model.sdf
files/worlds/: Readme.txt  room.world  room_box.world  room_chair.world
scripts/: make_spiral.py  plot_gains_map.py  plot_pos&yaw_1uav.py  plot_pos&yaw_3uav.py  plot_x(timestamp).py  plot_x(tsec).py  plot_y(tsec).py  plot_yaw(tsec).py  plot_z(tsec).py  subplot_col_status&d.py  subplot_pos&ref_1uav.py  subplot_pos_3uav.py  subplot_x(tsec)&gains.py  subplot_y(tsec)&gains.py  subplot_yaw(tsec)&gains.py  subplot_z(tsec)&gains.py
src/formation_controller/: CMakeLists.txt  package.xml
src/formation_controller/config/: params.yaml
src/formation_controller/launch/: formation_ctrl.launch
src/formation_controller/src/: README.txt  formation_controller.cpp
src/formation_controller/src/1 drone/: collision_avoidance.cpp  formation_controller.cpp
src/formation_controller/src/2 drones/: collision_avoidance.cpp  formation_controller.cpp
src/formation_controller/src/3 drones/: collision_avoidance.cpp
src/formation_controller/trajectories/: chair.csv  karton.csv  karton2.csv  obiekt1x1.csv  obiekt2.csv  obiekt_box9.csv  obiekt_box9_30st.csv  room_sciany.csv  spirala.csv  testlab.csv  trajectory.csv
src/position_controller/: CMakeLists.txt  package.xml
src/position_controller/cfg/: PID.cfg
src/position_controller/msg/: msgTrajectory.msg
src/position_controller/src/: README.txt  position_controller.cpp
src/position_controller/src/1_drone Sphinx/: position_controller.cpp
src/position_controller/src/1_drone odom/: position_controller.cpp
src/position_controller/src/1_drone optitrack/: position_controller.cpp
src/position_controller/src/2_drones Sphinx/: position_controller.cpp
src/position_controller/src/2_drones optitrack/: position_controller.cpp
src/position_controller/src/3_drones optitrack/: position_controller.cpp
